cabal-version:       2.4

name:                id
version:             0.2.0.0
license-file:        LICENSE

Flag cassava
  Description: Enable Cassava support
  Default:     True
  Manual:      False

Flag postgres
  Description: Enable Postgresql support
  Default:     True
  Manual:      False

Flag rel8
  Description: Enable Rel8 support
  Default:     False
  Manual:      False

Flag flat
  Description: Enable Flat serialization support
  Default:     True
  Manual:      False

Flag store
  Description: Enable Data.Store serialization support
  Default:     False
  Manual:      False

Flag openapi
  Description: Enable OpenAPI instances
  Default:     True
  Manual:      False

Flag lens
  Description: Generate lenses
  Default:     True
  Manual:      False

library
  exposed-modules:
    Data.Id
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base >=4.12 && <5,
    binary,
    deepseq,
    hashable,
    http-api-data,
    path-pieces,
    text,
    QuickCheck,
    uuid,
  if flag(postgres) && !impl(ghcjs)
    build-depends:
      postgresql-simple
    cpp-options: -DUSE_POSTGRES
  if flag(rel8) && !impl(ghcjs)
     build-depends: rel8
     cpp-options: -DUSE_REL8
  if flag(cassava) && !impl(ghcjs)
    build-depends:
      cassava
    cpp-options: -DUSE_CASSAVA
  if flag(flat)
    build-depends:
      flat,
    cpp-options: -DUSE_FLAT
  if flag(store)
    build-depends:
      store,
    cpp-options: -DUSE_STORE
  if flag(lens)
    build-depends: lens
    cpp-options: -DUSE_LENS
  if flag(openapi)
    build-depends: openapi3
    cpp-options: -DUSE_OPENAPI

  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    PolyKinds
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
