cabal-version:       2.4

name:                id
version:             0.2.0.0
license-file:        LICENSE

Flag cassava
  Description: Enable Postgresql support
  Default:     True
  Manual:      False


Flag postgres
  Description: Enable Postgresql support
  Default:     True
  Manual:      False

Flag flat
  Description: Enable Flat serialization support
  Default:     True
  Manual:      False

Flag store
  Description: Enable Data.Store serialization support
  Default:     False
  Manual:      False

library
  exposed-modules:
    Data.Id
  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base >=4.12 && <5,
    binary,
    deepseq,
    hashable,
    http-api-data,
    lens,
    path-pieces,
    text,
    uuid,
  if !(impl(ghcjs) || arch(javascript))
    build-depends:
        openapi3
      , QuickCheck
    cpp-options: -DBACKEND
  if flag(postgres) && !(impl(ghcjs) || arch(javascript))
    build-depends:
      postgresql-simple
    cpp-options: -DUSE_POSTGRES
  if flag(cassava) && !(impl(ghcjs) || arch(javascript))
    build-depends:
      cassava
    cpp-options: -DUSE_CASSAVA
  if flag(flat)
    build-depends:
      flat,
    cpp-options: -DUSE_FLAT
  if flag(store)
    build-depends:
      store,
    cpp-options: -DUSE_STORE

  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    PolyKinds
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
