cabal-version: 2.4
name:          id
version:       0.2.0.0
license-file:  LICENSE

flag cassava
  description: Enable Postgresql support
  default:     True
  manual:      False

flag postgres
  description: Enable Postgresql support
  default:     True
  manual:      False

flag flat
  description: Enable Flat serialization support
  default:     True
  manual:      False

flag store
  description: Enable Data.Store serialization support
  default:     False
  manual:      False

flag uuid-impl
  description: Include some functions with extra dependencies.
               Disable to reduce dependencies.
  default:     True
  manual:      False

library
  exposed-modules:    Data.Id
  build-depends:
    , aeson          >=1.0
    , base           >=4.12  && <5
    , binary
    , deepseq
    , hashable
    , http-api-data
    , lens
    , path-pieces
    , text
    , uuid-types
  if flag(uuid-impl)
    build-depends:
      , uuid >=1.3.9
    cpp-options:   -DUSE_UUID

  if !(impl(ghcjs) || arch(javascript) || arch(wasm32))
    build-depends:
      , openapi3
      , QuickCheck

    cpp-options:   -DBACKEND

  if (flag(postgres) && !(impl(ghcjs) || arch(javascript) || arch(wasm32)))
    build-depends: postgresql-simple
    cpp-options:   -DUSE_POSTGRES

  if (flag(cassava) && !(impl(ghcjs) || arch(javascript) || arch(wasm32)))
    build-depends: cassava
    cpp-options:   -DUSE_CASSAVA

  if flag(flat)
    build-depends: flat >=0.4
    cpp-options:   -DUSE_FLAT

  if flag(store)
    build-depends: store
    cpp-options:   -DUSE_STORE

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    PolyKinds
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
